@@ -1,5 +1,11 @@
 [b]Version 0.6.3[/b]:
 
+(2008-09-22)
+ * Now the subtitles can be mirrored, flipped or rotated along with the image.
+   The way to enable it is not obvious though. You need to enable the option 
+   "Include subtitles on screenshots" (Preferences->Subtitles).
+   Note: flipping the image if not using SSA/ASS doesn't work well.
+
 (2008-09-21)
  * Added the new option Video->Mirror image. This option mirrors the image 
    on the Y axis.
